--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
         </div>
         <div class="buttons">
             <button onclick="calculate('+')">Add</button>
+            <button onclick="calculate('-')">Subtract</button>
+            <button onclick="calculate('*')">Multiply</button>
+            <button onclick="calculate('/')">Divide</button>
         </div>
         <div class="result">
             <p>Result: <span id="result"></span></p>
